--- a/wp-content/themes/bruden/assets/css/shop.css
+++ b/wp-content/themes/bruden/assets/css/shop.css
@@ -327,6 +327,11 @@
 .products .product a {
   display: block;
 }
+.products .product a:nth-child(3) {
+  order: 5;
+  color: #292A33;
+  text-decoration: underline;
+}
 .products .product .onsale {
   display: block;
   padding: 5px;
@@ -345,6 +350,7 @@
 .products .product h2 {
   min-height: 44px;
   margin: 10px 0;
+  padding: 0 5px;
   font-weight: 600;
   font-size: 18px;
   line-height: 22px;
@@ -436,11 +442,166 @@
 }
 .woocommerce-page .wishlist_table tr td.product-remove a {
   font-size: 32px;
-  color: #f00;
+  color: #DE1616;
 }
 .woocommerce-page .wishlist_table tr td.product-thumbnail a {
   max-width: 100%;
 }
 .woocommerce-page .wishlist_table tr td.product-thumbnail a img {
   height: auto;
+}
+
+.woocommerce-cart .shop_table {
+  width: 100%;
+  border: 1px solid #7F7F7F;
+}
+.woocommerce-cart .shop_table tr {
+  display: flex;
+  align-items: center;
+  padding: 15px 0;
+  border-bottom: 1px solid #7F7F7F;
+}
+.woocommerce-cart .shop_table th,
+.woocommerce-cart .shop_table td {
+  width: 11%;
+  text-align: left;
+  font-weight: 300;
+  font-size: 22px;
+  line-height: 1;
+  text-align: left;
+  letter-spacing: 0.05em;
+  color: #000000;
+}
+.woocommerce-cart .shop_table th {
+  font-size: 18px !important;
+}
+.woocommerce-cart .shop_table tbody tr:last-child {
+  border: none;
+  padding: 10px 25px;
+}
+.woocommerce-cart .shop_table .qty {
+  width: 45px;
+  height: 30px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  text-align: center;
+}
+.woocommerce-cart .shop_table .actions {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.woocommerce-cart .shop_table .actions .button {
+  height: 30px;
+  padding: 8px 14px;
+  border: none;
+  border-radius: 0;
+  background: #292A33;
+  font-family: "Josefin Sans";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1;
+  letter-spacing: 0.05em;
+  text-transform: capitalize;
+  color: #FFFFFF;
+  opacity: 0.5;
+  transition: opacity 0.3s;
+}
+.woocommerce-cart .shop_table .actions .button:hover {
+  opacity: 0.75;
+}
+.woocommerce-cart .shop_table .actions .coupon {
+  display: flex;
+}
+.woocommerce-cart .shop_table .actions .coupon label {
+  display: none;
+}
+.woocommerce-cart .shop_table .actions .coupon input {
+  height: 30px;
+  padding: 5px 10px;
+  border: 1px solid #7F7F7F;
+}
+.woocommerce-cart .shop_table .actions .coupon .button {
+  opacity: 1;
+}
+.woocommerce-cart .shop_table .actions .coupon .button:hover {
+  opacity: 0.75;
+}
+.woocommerce-cart .shop_table .product-remove {
+  width: 10%;
+  font-size: 24px;
+  text-align: center;
+}
+.woocommerce-cart .shop_table .product-remove a {
+  color: #DE1616;
+}
+.woocommerce-cart .shop_table .product-thumbnail {
+  width: 10%;
+}
+.woocommerce-cart .shop_table .product-thumbnail img {
+  width: 60px;
+  height: 60px;
+}
+.woocommerce-cart .shop_table .product-name {
+  width: 40%;
+  font-size: 24px;
+  line-height: 29px;
+}
+.woocommerce-cart .shop_table .product-price,
+.woocommerce-cart .shop_table .product-subtotal {
+  width: 12%;
+}
+.woocommerce-cart .shop_table .product-quantity {
+  width: 15%;
+  display: flex;
+  align-items: center;
+  -moz-column-gap: 10px;
+       column-gap: 10px;
+}
+.woocommerce-cart .cart-collaterals {
+  width: 50%;
+  margin-top: 60px;
+  margin-left: auto;
+}
+.woocommerce-cart .cart-collaterals h2 {
+  margin: 0;
+  padding: 18px 25px;
+  border: 1px solid #7F7F7F;
+  border-bottom: none;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 29px;
+  text-transform: capitalize;
+}
+.woocommerce-cart .cart-collaterals tr {
+  padding: 18px 25px;
+}
+.woocommerce-cart .cart-collaterals tr th,
+.woocommerce-cart .cart-collaterals tr td {
+  width: 50%;
+}
+.woocommerce-cart .cart-collaterals tr strong {
+  font-weight: 300;
+}
+.woocommerce-cart .cart-collaterals .wc-proceed-to-checkout {
+  padding: 18px 25px;
+  border: 1px solid #7F7F7F;
+  border-top: none;
+}
+.woocommerce-cart .cart-collaterals .wc-proceed-to-checkout .checkout-button {
+  display: block;
+  padding: 14px 25px;
+  background: #292A33;
+  border: 1px solid #292A33;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 1;
+  letter-spacing: 0.15em;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  transition: background 0.3s, color 0.3s;
+}
+.woocommerce-cart .cart-collaterals .wc-proceed-to-checkout .checkout-button:hover {
+  background: transparent;
+  color: #000000;
 }
