--- a/wp-content/themes/bruden/assets/scss/shop.scss
+++ b/wp-content/themes/bruden/assets/scss/shop.scss
@@ -390,6 +390,12 @@
 
         a {
             display: block;
+
+            &:nth-child(3) {
+                order: 5;
+                color: #292A33;
+                text-decoration: underline;
+            }
         }
 
         .onsale {
@@ -412,6 +418,7 @@
         h2 {
             min-height: 44px;
             margin: 10px 0;
+            padding: 0 5px;
             font-weight: 600;
             font-size: 18px;
             line-height: 22px;
@@ -518,7 +525,7 @@
 
     .wishlist_table tr td.product-remove a {
         font-size: 32px;
-        color: #f00;
+        color: #DE1616;
     }
 
     .wishlist_table tr td.product-thumbnail a {
@@ -527,5 +534,192 @@
 
     .wishlist_table tr td.product-thumbnail a img {
         height: auto;
+    }
+}
+
+.woocommerce-cart {
+
+    .shop_table  {
+        width: 100%;
+        border: 1px solid #7F7F7F;
+
+        tr {
+            display: flex;
+            align-items: center;
+            padding: 15px 0;
+            border-bottom: 1px solid #7F7F7F;
+        }
+
+        th,
+        td {
+            width: 11%;
+            text-align: left;
+            font-weight: 300;
+            font-size: 22px;
+            line-height: 1;
+            text-align: left;
+            letter-spacing: 0.05em;
+            color: #000000;
+        }
+
+        th {
+            font-size: 18px !important;
+        }
+
+        tbody {
+            tr:last-child {
+                border: none;
+                padding: 10px 25px;
+            }
+        }
+
+        .qty {
+            width: 45px;
+            height: 30px;
+            border: 1px solid rgba(0, 0, 0, 0.3);
+            text-align: center;
+        }
+
+        .actions {
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+
+            .button {
+                height: 30px;
+                padding: 8px 14px;
+                border: none;
+                border-radius: 0;
+                background: #292A33;
+                font-family: 'Josefin Sans';
+                font-style: normal;
+                font-weight: 500;
+                font-size: 14px;
+                line-height: 1;
+                letter-spacing: 0.05em;
+                text-transform: capitalize;
+                color: #FFFFFF;
+                opacity: .5;
+                transition: opacity .3s;
+
+                &:hover {
+                    opacity: .75;
+                }
+            }
+
+            .coupon {
+                display: flex;
+
+                label {
+                    display: none;
+                }
+
+                input {
+                    height: 30px;
+                    padding: 5px 10px;
+                    border: 1px solid #7F7F7F;
+                }
+
+                .button {
+                    opacity: 1;
+
+                    &:hover {
+                        opacity: .75;
+                    }
+                }
+            }
+        }
+
+        .product-remove {
+            width: 10%;
+            font-size: 24px;
+            text-align: center;
+            
+            a {
+                color: #DE1616;
+            }
+        }
+
+        .product-thumbnail {
+            width: 10%;
+
+            img {
+                width: 60px;
+                height: 60px;
+            }
+        }
+
+        .product-name {
+            width: 40%;
+            font-size: 24px;
+            line-height: 29px;
+        }
+
+        .product-price,
+        .product-subtotal {
+            width: 12%;
+        }
+
+        .product-quantity {
+            width: 15%;
+            display: flex;
+            align-items: center;
+            column-gap: 10px;
+        }
+    }
+
+    .cart-collaterals {
+        width: 50%;
+        margin-top: 60px;
+        margin-left: auto;
+
+        h2 {
+            margin: 0;
+            padding: 18px 25px;
+            border: 1px solid #7F7F7F;
+            border-bottom: none;
+            font-weight: 500;
+            font-size: 24px;
+            line-height: 29px;
+            text-transform: capitalize;
+        }
+
+        tr {
+            padding: 18px 25px;
+
+            th,
+            td {
+                width: 50%;
+            }
+
+            strong {
+                font-weight: 300;
+            }
+        }
+
+        .wc-proceed-to-checkout {
+            padding: 18px 25px;
+            border: 1px solid #7F7F7F;
+            border-top: none;
+
+            .checkout-button {
+                display: block;
+                padding: 14px 25px;
+                background: #292A33;
+                border: 1px solid #292A33;
+                font-weight: 300;
+                font-size: 18px;
+                line-height: 1;
+                letter-spacing: 0.15em;
+                text-transform: uppercase;
+                color: #FFFFFF;
+                transition: background .3s, color .3s;
+
+                &:hover {
+                    background: transparent;
+                    color: #000000;
+                }
+            }
+        }
     }
 }
